--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
 name = "copilot-import"
-version = "1.0.0"
+version = "0.1.0"
 description = "Inspired by https://github.com/drathier/stack-overflow-import"
 authors = [
     "Mythic <mythicmaniac@gmail.com>",
     "Thijs Molendijk <info@thijsmolendijk.nl>",
 ]
 license = "MIT"
+readme = "README.md"
 packages = [
     { include = "copilot" },
 ]
