Add GitHub copilot authentication CLI
Add a CLI for authenticating with GitHub and fetching a token to the
Copilot API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,12 @@ packages = [
     { include = "copilot" },
 ]
 
+[tool.poetry.scripts]
+copilot-auth = 'copilot.authflow:run'
+
 [tool.poetry.dependencies]
 python = "^3.8"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 
